--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
 
     <!-- main start  -->
     <main>
+        <!-- missiopn section start  -->
         <section class="container">
             <h1 class="my-mission">My Mission in <span>2022</span></h1>
             <div class="mission">
+                <!-- mission 1 -->
                 <div class="mission-1">
                     <figure>
                         <img src="./images/illustrators/illustrator-1.png" alt="">
@@ -51,6 +53,7 @@
                             consequat duis enim velit mollit.</p>
                     </div>
                 </div>
+                <!-- mission 2 -->
                 <div class="mission-2">
                     <figure>
                         <img src="./images/illustrators/illustrator-2.png" alt="">
@@ -61,6 +64,7 @@
                             consequat duis enim velit mollit.</p>
                     </div>
                 </div>
+                <!-- mission 3 -->
                 <div class="mission-3">
                     <figure>
                         <img src="./images/illustrators/illustrator-3.png" alt="">
@@ -69,6 +73,27 @@
                         <h2>Goal</h2>
                         <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
                             consequat duis enim velit mollit.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- mission end  -->
+
+        <!-- devlop section  -->
+        <section class="container">
+            <div class="develop-back">
+                <div class="develop">
+                    <div class="develop-img">
+                        <img src="./images/pictures/coding.png" alt="">
+                    </div>
+                    <div class="develop-detail">
+                        <h1>Develop <br> Without Limits</h1>
+                        <h4>
+                            Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No
+                            duo populo animal noluisse, enim deterruisset eos et. An mundi noster pri, ea eos quas
+                            expetendis scripserit, affert gubergren dissentias et cum.
+                        </h4>
+                        <button>Read the Documentation</button>
                     </div>
                 </div>
             </div>
