--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         <!-- devlop section  -->
         <section class="container">
             <div class="develop-back">
+                <img class="shap-1" src="./images/shapes/shape-1.png" alt="">
                 <div class="develop">
                     <div class="develop-img">
                         <img src="./images/pictures/coding.png" alt="">
