--- a/index.html
+++ b/index.html
@@ -99,6 +99,29 @@
                 </div>
             </div>
         </section>
+        <!-- develop section end  -->
+
+        <!-- community section  -->
+        <section class="container">
+            <div class="community-back">
+                <img class="community-shape1" src="./images/shapes/shape-1.png" alt="">
+                <div class="community">
+                    <div class="community-img">
+                        <img src="./images/pictures/project.png" alt="">
+                    </div>
+                    <div class="community-detail">
+                        <h1>Know our <br> Global Community</h1>
+                        <h4>
+                            Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No
+                            duo populo animal noluisse, enim deterruisset eos et. An mundi noster pri, ea eos quas
+                            expetendis scripserit, affert gubergren dissentias et cum.
+                        </h4>
+                        <button>Read the Documentation</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
     <!-- main end -->
 </body>
