--- a/index.html
+++ b/index.html
@@ -122,6 +122,33 @@
             </div>
         </section>
 
+        <!-- develop end -->
+
+        <!-- application  -->
+
+        <section class="container">
+            <h1 class="app-head">Build <span>Corona Application</span></h1>
+            <div class="container application">
+                <div class="application-img">
+                    <img class="app-shape1" src="./images/shapes/shape-3.png" alt="">
+                    <img class="app-shape2" src="./images/shapes/shape-3.png" alt="">
+                    <img class="app-shape3" src="./images/shapes/shape-3.png" alt="">
+                    <img class="app-img" src="./images/pictures/app.png" alt="">
+                </div>
+                <div class="application-detail">
+                    <h1>
+                        Stay safe with <br> Go<span>Corona.</span>
+                    </h1>
+                    <h4>
+                        Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo
+                        populo animal noluisse, enim deterruisset eos et. An mundi noster pri, ea eos quas expetendis
+                        scripserit, affert gubergren dissentias et cum.
+                    </h4>
+                    <button>App Fetures</button>
+                </div>
+            </div>
+        </section>
+
     </main>
     <!-- main end -->
 </body>
