--- a/index.html
+++ b/index.html
@@ -151,6 +151,13 @@
 
     </main>
     <!-- main end -->
+
+    <footer class="footer">
+        <div class="">
+            <h1>Mission <span>2022</span></h1>
+            <h4>Hard work, Perseverance, and Determination for 2022</h4>
+        </div>
+    </footer>
 </body>
 
 </html>
